[package]
name = "pyo3-async-runtimes-macros"
description = "Proc Macro Attributes for `pyo3-async-runtimes`"
version = "0.27.0"
authors = [
    "Andrew J Westlake <awestlake87@yahoo.com>",
    "David Hewitt <mail@davidhewitt.dev>",
]
readme = "../README.md"
keywords = ["pyo3", "python", "ffi", "async", "asyncio"]
homepage = "https://github.com/PyO3/pyo3-async-runtimes"
repository = "https://github.com/PyO3/pyo3-async-runtimes"
documentation = "https://docs.rs/crate/pyo3-async-runtimes/"
categories = ["api-bindings", "development-tools::ffi"]
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1"
syn = { version = "2", features = ["full"] }
