[package]
name = "pyo3-asyncio-macros-0-21"
description = "Proc Macro Attributes for PyO3 Asyncio - 0.21 fork"
version = "0.21.0"
authors = [
    "Andrew J Westlake <awestlake87@yahoo.com>",
    "David Hewitt <mail@davidhewitt.dev>",
]
readme = "../README.md"
keywords = ["pyo3", "python", "ffi", "async", "asyncio"]
homepage = "https://github.com/davidhewitt/pyo3-asyncio"
repository = "https://github.com/davidhewitt/pyo3-asyncio"
documentation = "https://docs.rs/crate/pyo3-asyncio-0-21/"
categories = ["api-bindings", "development-tools::ffi"]
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1"
syn = { version = "1", features = ["full"] }
